# redox

./: .gitignore
redox-disk-installer/: CHANGELOG.md  Cargo.toml  README.md  RESUMEN_INSTALADOR.md  USO_REDOXFS.md  build.sh  install_to_disk.sh
redox-disk-installer/src/: direct_installer.rs  disk_manager.rs  main.rs  validation.rs
